# con-environment

./: .envrc  .gitignore  Cargo.toml  README.md  Tiltfile  flake.nix  upload_workshop.sh
crates/hub/: Cargo.toml
crates/hub/src/: auth.rs  config.rs  default_index.html  error.rs  gc.rs  main.rs  orchestrator.rs  proxy.rs
crates/hub/src/tests/: config.rs  gc.rs  helpers.rs  integration.rs
crates/inspector/src/: main.rs
crates/integration-tests/: Cargo.toml  config.yaml
crates/integration-tests/src/: client.rs  lib.rs  main.rs
crates/integration-tests/src/tests/: auth.rs  communication.rs  gc.rs  lifecycle.rs  stress.rs
crates/sidecar/: Cargo.toml
crates/sidecar/src/: config.rs  http_server.rs  main.rs  proxy.rs  tests.rs
deployment/: README.md
nix/: ceph.nix  cilium-patch.nix  con_shell.nix  dev_shell.nix  talos.nix  tilt.nix
nix/con_shell/: cluster_ops.nix  config_generators.nix  nas.nix  patch_generators.nix  talos-iso.nix
nix/dev_shell/: container_repository.nix  patches.nix  vllm.nix
nix/nas/: configuration.nix  inspector.nix  install_guide.md  iso.nix
nix/patches/: cilium.nix  ghcr.nix
setup/: README.md
setup/k8/: cilium-values.yaml  model-proxy.yaml  test-env.yaml  workshop.yaml
setup/k8/rook-ceph/: ceph-block-pool.yaml  ceph-object-store.yaml  ceph-s3-user.yaml  toolbox.yaml
setup/k8/rook_ceph/: ceph-object-store.yaml  ceph-s3-user.yaml  storage-class.yaml
setup/scripts/: cilium.sh  create-secrets.sh  rook-ceph.sh
setup/talos/: cilium.yaml
setup/tests/: cilium.sh  rook-ceph.sh  sessions.sh
workshops/: dev-tilt.yaml
workshops/inspect-basic/: Dockerfile  Dockerfile.coder  cilium-policies.yaml  download.py  lab-service.yaml  requirements.txt  start.sh  tilt-service.yaml
workshops/inspect-basic/workspace/: README.md
workshops/inspect-basic/workspace/logs/: 2025-11-02T22-42-56-05-00_theory-of-mind_noqMTTzARs4aWt5qkbXWSe.eval
workshops/inspect-basic/workspace/math/measuring-mathematical-problem-solving/: __init__.py  task.py
(+1 files in other folders)
