[package]
name = "workshop-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server and routing
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.3", features = ["tokio", "client"] }
http-body-util = "0.1.1"

# Kubernetes client
kube = { version = "2.0", features = ["runtime", "derive"] }
kube-runtime = "2.0"
k8s-openapi = { version = "0.26.0", features = ["v1_34"] }

# Authentication (JWT)
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

# Logging and Errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

# For GC health checks
reqwest = { version = "0.12.2", features = ["json"] }

# Utilities
futures-util = "0.3"
envy = "0.4.2"
rand = "0.9.2"
tower-http = { version = "0.6.6", features = ["fs"] }
