[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kubernetes client
kube = { version = "0.95", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["v1_30"] }

# HTTP client for testing
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT for auth testing
jsonwebtoken = "9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# For waiting/timeouts
futures = "0.3"
chrono = "0.4.42"

[dev-dependencies]
# These are only needed when running tests
assert-json-diff = "2"
